chore(git): Apply review suggestions #12350